// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuSearch should be rendered correctly with null value 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box searchInput"
  >
    <div
      class="container uui-icon uui-enabled controlIcon"
    >
      <svg
        class=""
      />
    </div>
    <input
      class="uui-input"
      tabindex="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`MainMenuSearch should be rendered correctly with value and extra props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box searchInput"
  >
    <div
      class="container uui-icon uui-enabled controlIcon"
    >
      <svg
        class=""
      />
    </div>
    <input
      class="uui-input"
      tabindex="0"
      type="primary"
      value="test"
    />
  </div>
</DocumentFragment>
`;
